--- a/src/app/components/Header.module.css
+++ b/src/app/components/Header.module.css
@@ -1,6 +1,15 @@
 .Header {
-    display: flex;
-    justify-content: space-between;
-    /* background-color: brown; */
-    width: 100%;
+  display: flex;
+  justify-content: space-between;
+  gap: 100px;
+  /* background-color: brown; */
+  width: 100%;
+}
+
+.links {
+  display: flex;
+  justify-content: space-between;
+  gap: 1rem;
+  /* background-color: brown; */
+  /* width: 100%; */
 }
